--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <!-- REPLACE FOR LOCAL DEV -->
   <!-- <meta name="schema" content="/api/v1/vandal/schema.json"> -->
   <meta name="schema" content="/api/v2/vandal/schema.json">
+  <meta name="REMOTE_HOSTS"
+    content="[{'app': 'Notification Center', 'url': 'dev-notifications.metoda.com', 'schemaPath': '/api/v1/vandal/schema.json'}]">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <title>vandal</title>
