--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <!-- REPLACE FOR LOCAL DEV -->
   <!-- <meta name="schema" content="/api/v1/vandal/schema.json"> -->
   <meta name="schema" content="__SCHEMA_PATH__">
-  <meta name="REMOTE_HOSTS"
-    content='[ { "name": "Notification Center", "url": "https://dev-notifications.metoda.com", "schemaPath": "/api/v1/vandal/schema.json" }, { "name": "Notification Hub", "url": "https://dev-notification-sender.metoda.com", "schemaPath": "/api/v2/vandal/schema.json" },{ "name": "Account", "url": "https://dev-account.metoda.com", "schemaPath": "/api/v2/vandal/schema.json" }]'>
+  <meta name="REMOTE_HOSTS" content="__REMOTE_HOSTS__">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <title>vandal</title>
