--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
   <!-- REPLACE FOR LOCAL DEV -->
   <!-- <meta name="schema" content="/api/v1/vandal/schema.json"> -->
   <meta name="schema" content="__SCHEMA_PATH__">
-  <meta name="REMOTE_HOSTS"
-    content='[{"name": "liq", "url": "http://0.0.0.0:3000", "schemaPath":"/api/v1/vandal/schema.json"}]'>
+  <meta name="REMOTE_HOSTS" content="__REMOTE_HOSTS__">
+  <meta name="USE_REMOTE_HOSTS" content="__USE_REMOTE_HOSTS__">
+  <meta name="USE_CUSTOM_HEADER" content="__USE_CUSTOM_HEADER__">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <title>vandal</title>
